<resources>
    <string name="app_name">bitChat</string>
    <string name="welcome_to">Welcome To</string>
    <string name="appTag">bitChat | video meeting</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordHint">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_a_few_details_to_get_your_account_ready">We need a few details to get your account ready</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_out">Sign Out</string>

</resources>