<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout

            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/layoutHeader"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/welcome_to"
                android:textColor="@color/colorTextIcon"
                android:textSize="@dimen/_16ssp"/>

            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/appTag"
                android:textColor="@color/colorTextIcon"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSignInLable"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="Sign in to Your Account"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader"
            android:textSize="@dimen/_15ssp"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/textSignInLable"
            app:cardCornerRadius="@dimen/_4sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:text="@string/email"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/colorPrimaryText"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:id="@+id/inputEmailSignIn"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="Email"
                android:imeOptions="actionNext"
                android:importantForAutofill="yes"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHintText"
                android:textSize="@dimen/_13ssp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:text="@string/password"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/colorPrimaryText"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:id="@+id/inputPasswordSignIn"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/passwordHint"
                android:imeOptions="actionDone"
                android:importantForAutofill="yes"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHintText"
                android:textSize="@dimen/_13ssp"
                />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:id="@+id/buttonSignIn"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/cardSignIn"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textColor="@color/colorTextIcon"
            android:textSize="@dimen/_13ssp"/>
        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:id="@+id/signInProgressBar"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@id/buttonSignIn"
            app:layout_constraintTop_toTopOf="@id/buttonSignIn"
            app:layout_constraintBottom_toBottomOf="@id/buttonSignIn"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textNoAccount"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_13ssp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textSignUp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="Sign Up"
            app:layout_constraintTop_toBottomOf="@id/textNoAccount"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/_6sdp"


            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>