<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.SignUpActivity">
    <LinearLayout
        android:id="@+id/layoutHeaderSignUp"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_arrow_back_24"
            android:tint="@color/colorTextIcon"
            android:contentDescription="@string/app_name"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:includeFontPadding="false"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/colorTextIcon"
            android:textSize="@dimen/_15ssp"
            android:text="@string/sign_up"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeaderSignUp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_15ssp"
                android:text="@string/we_need_a_few_details_to_get_your_account_ready"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/cardSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_4sdp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/first_name"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/colorPrimaryText"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/inputFirstName"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="First Name"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="yes"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/last_name"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/colorPrimaryText"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/inputLastName"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="Last Name"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="yes"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/email"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/colorPrimaryText"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/inputEmail"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="Email"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="yes"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/password"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/colorPrimaryText"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/inputPassword"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/passwordHint"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="yes"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/confirm_password"
                        android:textSize="@dimen/_11ssp"
                        android:textColor="@color/colorPrimaryText"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:id="@+id/inputConfrimPassword"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="yes"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="@dimen/_13ssp"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:id="@+id/buttonSignUp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@id/cardSignUp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="@string/sign_up"
                    android:textStyle="bold"
                    android:textColor="@color/colorTextIcon"
                    android:textSize="@dimen/_13ssp"/>
                <ProgressBar
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:id="@+id/signUpProgressBar"/>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textAlreadyAccount"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/already_have_an_account"
                app:layout_constraintTop_toBottomOf="@id/buttonSignUp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_13ssp"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textSignIn"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="Sign In"
                app:layout_constraintTop_toBottomOf="@id/textAlreadyAccount"
                android:textColor="@color/colorAccent"
                android:textAllCaps="true"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="@dimen/_6sdp"


                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>